--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -35,6 +35,7 @@
         android:layout_alignParentBottom="true"
         android:foregroundGravity="center"
         android:gravity="center_horizontal"
+        android:visibility="gone"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
@@ -43,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:id="@+id/textViewVersion"
             android:text="1.1.0.1"
             android:textColor="@color/orange2" />
 
