--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">37.191.92.130</domain>
         <domain includeSubdomains="true">172.18.12.242</domain>
+        <domain includeSubdomains="true">172.18.12.121</domain>
         <domain includeSubdomains="true">https://www.abfaesfahan.ir</domain>
         <domain includeSubdomains="true">https://webservice.aspsms.com</domain>
         <domain includeSubdomains="true">webservice.aspsms.com</domain>
