--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -25,12 +25,11 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginLeft="@dimen/activity_medium_margin"
-                android:layout_marginRight="@dimen/activity_medium_margin"
                 android:layout_marginBottom="@dimen/activity_mid_margin"
                 android:layout_weight="1"
                 android:background="@drawable/border_gray_1"
-                android:padding="@dimen/activity_mid_padding"
+                android:paddingTop="@dimen/activity_mid_padding"
+                android:paddingBottom="@dimen/activity_mid_padding"
                 tools:ignore="NestedWeights">
 
                 <LinearLayout
@@ -41,8 +40,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/activity_large_margin"
-                        android:layout_marginRight="@dimen/activity_large_margin"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
