--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,12 +9,13 @@
 
     <dimen name="activity_medium_padding">10dp</dimen>
     <dimen name="activity_medium_margin">10dp</dimen>
+    <dimen name="activity_medium_margin_">10dp</dimen>
 
     <dimen name="activity_large_margin">30dp</dimen>
     <dimen name="activity_large_padding">80dp</dimen>
 
     <dimen name="textSizeHuge">30sp</dimen>
     <dimen name="textSizeLarge">23sp</dimen>
-    <dimen name="textSizeMedium">20sp</dimen>
+    <dimen name="textSizeMedium">18sp</dimen>
     <dimen name="textSizeSmall">15sp</dimen>
 </resources>
