--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
@@ -428,10 +427,10 @@
             android:layout_marginLeft="@dimen/activity_medium_margin"
             android:layout_marginRight="@dimen/activity_medium_margin"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_1"
-            mapbox:mapbox_cameraTargetLat="40.73581"
-            mapbox:mapbox_cameraTargetLng="-73.99155"
-            mapbox:mapbox_cameraZoom="11" />
+            android:background="@drawable/border_gray_1" />
+        <!--            mapbox:mapbox_cameraTargetLat="40.73581"-->
+        <!--            mapbox:mapbox_cameraTargetLng="-73.99155"-->
+        <!--            mapbox:mapbox_cameraZoom="11" />-->
     </LinearLayout>
 
     <Button
