--- a/app/src/main/res/layout/crop_activity.xml
+++ b/app/src/main/res/layout/crop_activity.xml
@@ -4,12 +4,12 @@
     android:id="@+id/rlContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.leon.estimate.Activities.CropActivity">
+    tools:context="com.leon.estimate.activities.CropActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
+        android:background="@color/white"
         android:orientation="vertical"
         android:weightSum="10"
         tools:context=".ImageCropActivity">
@@ -17,41 +17,44 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="@dimen/activity_large_margin"
+            android:layout_marginEnd="@dimen/activity_large_margin"
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/ivRotate"
+                android:id="@+id/imageViewRotate"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="@dimen/activity_mid_margin"
+                android:layout_marginEnd="@dimen/activity_mid_margin"
                 android:foreground="?android:selectableItemBackground"
-                android:padding="5dp"
-                android:src="@drawable/ic_rotate" />
+                android:padding="@dimen/activity_mid_padding"
+                android:src="@drawable/ic_rotate"
+                tools:ignore="ContentDescription,UnusedAttribute" />
 
             <ImageView
-                android:id="@+id/ivRebase"
+                android:id="@+id/imageViewRebase"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
-                android:padding="5dp"
-                android:src="@drawable/ic_align" />
+                android:padding="@dimen/activity_mid_padding"
+                android:src="@drawable/ic_align"
+                tools:ignore="ContentDescription,UnusedAttribute" />
 
             <ImageView
-                android:id="@+id/ivInvert"
+                android:id="@+id/imageViewInvert"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:foreground="?android:selectableItemBackground"
-                android:padding="5dp"
-                android:src="@drawable/ic_invert_colors" />
+                android:padding="@dimen/activity_mid_padding"
+                android:src="@drawable/ic_invert_colors"
+                tools:ignore="UnusedAttribute" />
         </RelativeLayout>
 
         <FrameLayout
@@ -59,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/activity_medium_margin"
             android:layout_weight="8">
 
             <FrameLayout
@@ -67,14 +70,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_margin="10dp">
+                android:layout_margin="@dimen/activity_medium_margin">
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:adjustViewBounds="true" />
+                    android:adjustViewBounds="true"
+                    tools:ignore="ContentDescription" />
             </FrameLayout>
 
             <team.clevel.documentscanner.libraries.PolygonView
@@ -93,23 +97,26 @@
             android:weightSum="2">
 
             <Button
-                android:id="@+id/btnClose"
+                android:id="@+id/buttonClose"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/activity_large_margin"
                 android:layout_weight="1"
                 android:background="@drawable/border_red_2"
-                android:textSize="@dimen/textSizeLarge" />
+                android:textSize="@dimen/textSizeLarge"
+                tools:ignore="ButtonStyle" />
+
             <Button
-                android:id="@+id/btnImageCrop"
+                android:id="@+id/buttonCrop"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/activity_large_margin"
                 android:layout_weight="1"
                 android:background="@drawable/border_green_2"
-                android:textSize="@dimen/textSizeLarge" />
+                android:textSize="@dimen/textSizeLarge"
+                tools:ignore="ButtonStyle" />
 
         </LinearLayout>
     </LinearLayout>
@@ -119,5 +126,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/halfTransparentBackground"
-        android:padding="100dp" />
+        android:padding="@dimen/activity_large_padding" />
 </RelativeLayout>
