--- a/app/src/main/res/layout/download_activity.xml
+++ b/app/src/main/res/layout/download_activity.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".Activities.DownloadActivity">
+    tools:context=".activities.DownloadActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
