--- a/app/src/main/res/layout/form_activity.xml
+++ b/app/src/main/res/layout/form_activity.xml
@@ -4,7 +4,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.leon.estimate.Activities.FormActivity">
+    tools:context="com.leon.estimate.activities.FormActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
