--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context="com.leon.estimate.Fragments.FormFragment">
+    tools:context="com.leon.estimate.fragments.FormFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -74,7 +74,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/zone"
                         android:textColor="@color/blue4"
@@ -86,7 +86,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/user_type"
                         android:textColor="@color/blue4"
@@ -98,7 +98,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/bill_id"
                         android:textColor="@color/blue4"
@@ -110,7 +110,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/sifoon_100"
                         android:textColor="@color/blue4"
@@ -122,7 +122,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/sifoon_150"
                         android:textColor="@color/blue4"
@@ -134,7 +134,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/arse_kol"
                         android:textColor="@color/blue4"
@@ -146,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/ayan_maskooni"
                         android:textColor="@color/blue4"
@@ -158,7 +158,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/number_maskooni"
                         android:textColor="@color/blue4"
@@ -182,7 +182,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/taxfif_number"
                         android:textColor="@color/blue4"
@@ -193,7 +193,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/adam_taxfif_ab"
                         android:textColor="@color/blue4"
@@ -204,7 +204,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="@string/zarfiat_qaradadi"
                         android:textColor="@color/blue4"
@@ -216,7 +216,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="شماره پروانه"
                         android:textColor="@color/blue4"
@@ -227,7 +227,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_medium_margin_"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="شماره پلاک ثبتی"
                         android:textColor="@color/blue4"
