--- a/app/src/main/res/layout/item_address_1.xml
+++ b/app/src/main/res/layout/item_address_1.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/activity_mid_padding">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -189,9 +190,4 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_mid_margin"
-        android:orientation="vertical" />
 </LinearLayout>
