--- a/app/src/main/res/layout/item_address_2.xml
+++ b/app/src/main/res/layout/item_address_2.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_mid_padding"
     android:orientation="vertical">
 
     <LinearLayout
@@ -189,9 +190,4 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_mid_margin"
-        android:orientation="vertical" />
 </LinearLayout>
