--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -7,74 +7,39 @@
     tools:context="com.leon.estimate.fragments.FormFragment">
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/activity_mid_margin"
+        android:layout_marginRight="@dimen/activity_mid_margin"
+        android:gravity="center"
         android:orientation="vertical"
-        android:weightSum="5"
         tools:ignore="UselessParent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/activity_mid_margin"
-            android:layout_marginRight="@dimen/activity_mid_margin"
-            android:layout_weight="2"
-            android:background="@drawable/border_gray_1"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_large_margin"
             android:gravity="center"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:gravity="center"
-                android:text="@string/services"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeHuge"
-                android:textStyle="bold" />
-
-            <GridView
-                android:id="@+id/gridView"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:numColumns="2"
-                tools:ignore="NestedScrolling"
-                tools:listitem="@layout/item_check_box" />
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                tools:ignore="ScrollViewCount">
-
-
-                <LinearLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    tools:ignore="MissingConstraints" />
-            </ScrollView>
-
-        </LinearLayout>
+            android:text="@string/moshakhasat_melk"
+            android:textColor="@color/blue4"
+            android:textSize="@dimen/textSizeHuge"
+            android:textStyle="bold" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_mid_margin"
-            android:layout_weight="3"
             android:background="@drawable/border_gray_1"
-            android:padding="@dimen/activity_mid_padding">
+            android:padding="@dimen/activity_mid_padding"
+            tools:ignore="UselessParent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:baselineAligned="false"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
@@ -742,16 +707,4 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/activity_mid_margin"
-        android:background="@drawable/border_blue_1"
-        android:padding="@dimen/activity_medium_padding"
-        android:text="بعدی"
-        android:textStyle="bold" />
 </RelativeLayout>
