--- a/app/src/main/res/layout/item_address_2.xml
+++ b/app/src/main/res/layout/item_address_2.xml
@@ -11,6 +11,7 @@
     android:padding="@dimen/activity_mid_padding">
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -70,6 +71,7 @@
         android:background="@color/blue2" />
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -83,7 +85,7 @@
             android:layout_margin="@dimen/activity_mid_margin"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/blue2"
+            android:textColor="@color/white"
             android:textSize="@dimen/textSizeMedium"
             android:textStyle="bold" />
 
@@ -111,6 +113,7 @@
         android:background="@color/blue2" />
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -152,6 +155,7 @@
         android:background="@color/blue2" />
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -203,10 +207,4 @@
             android:textSize="@dimen/textSizeMedium"
             android:textStyle="bold" />
     </LinearLayout>
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="vertical"-->
-    <!--        tools:ignore="UselessParent">-->
-    <!--    </LinearLayout>-->
 </LinearLayout>
