--- a/app/src/main/res/layout/brightness_contrast_activity.xml
+++ b/app/src/main/res/layout/brightness_contrast_activity.xml
@@ -18,7 +18,8 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/border_2"
-            android:padding="@dimen/activity_medium_padding" />
+            android:padding="@dimen/activity_medium_padding"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,7 +78,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/border_green_2"
                 android:text="@string/accepted"
-                android:textSize="@dimen/textSizeLarge" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/textSizeLarge"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/button_close"
@@ -88,7 +91,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/border_red_2"
                 android:text="@string/close"
-                android:textSize="@dimen/textSizeLarge" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/textSizeLarge"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
