--- a/app/src/main/res/layout/document_activity1.xml
+++ b/app/src/main/res/layout/document_activity1.xml
@@ -7,67 +7,73 @@
     android:layoutDirection="rtl"
     tools:context="com.leon.estimate.activities.DocumentActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="ScrollViewSize">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:ignore="ScrollViewSize">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_large_margin"
+            android:background="@drawable/border_2"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/activity_mid_margin"
+                android:src="@drawable/icon_finder_camera"
+                tools:ignore="ContentDescription" />
+
+            <Spinner
+                android:id="@+id/spinnerTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/activity_large_margin"
-                android:background="@drawable/border_2"
-                android:orientation="vertical">
+                android:background="@drawable/border_gray_2"
+                android:paddingLeft="@dimen/activity_large_padding"
+                android:paddingRight="@dimen/activity_large_padding" />
 
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_mid_margin"
-                    android:src="@drawable/icon_finder_camera"
-                    tools:ignore="ContentDescription" />
-
-                <Button
-                    android:id="@+id/button_pick1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/activity_large_margin"
-                    android:background="@drawable/border_blue_1"
-                    android:paddingLeft="@dimen/activity_large_padding"
-                    android:paddingRight="@dimen/activity_large_padding"
-                    android:text="@string/pick_an_image"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/textSizeMedium"
-                    tools:ignore="MissingConstraints" />
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/button_pick1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:background="@drawable/border_2"
-                android:weightSum="2"
-                tools:ignore="ContentDescription" />
-
-            <GridView
-                android:id="@+id/gridViewImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/border_gray_1"
-                android:gravity="center"
-                android:numColumns="2"
-                tools:ignore="NestedScrolling"
-                tools:listitem="@layout/item_image" />
+                android:layout_margin="@dimen/activity_large_margin"
+                android:background="@drawable/border_blue_1"
+                android:paddingLeft="@dimen/activity_large_padding"
+                android:paddingRight="@dimen/activity_large_padding"
+                android:text="@string/pick_an_image"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textSizeMedium"
+                tools:ignore="MissingConstraints" />
         </LinearLayout>
-    </ScrollView>
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_large_margin"
+            android:background="@drawable/border_2"
+            android:weightSum="2"
+            tools:ignore="ContentDescription" />
+
+        <GridView
+            android:id="@+id/gridViewImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_large_margin"
+            android:background="@drawable/border_gray_1"
+            android:gravity="center"
+            android:nestedScrollingEnabled="true"
+            android:numColumns="2"
+            tools:ignore="NestedScrolling,ScrollViewSize,UnusedAttribute"
+            tools:listitem="@layout/item_image" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
